--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
+sudo: required
 dist: trusty
 language: clojure
-script: lein cljsbuild once test 
+script: lein doo chrome "tests" once
+addons:
+  chrome: stable
+before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
